--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,34 +8,35 @@
     
     // File associations
     "files.associations": {
-        "*.h": "cpp",
-        "*.cpp": "cpp",
-        "*.tcc": "cpp",
-        "array": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "vector": "cpp",
-        "functional": "cpp",
-        "memory": "cpp",
-        "optional": "cpp",
-        "algorithm": "cpp",
-        "cmath": "cpp",
-        "cstdint": "cpp",
-        "cstddef": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "cctype": "cpp",
-        "chrono": "cpp",
-        "limits": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "initializer_list": "cpp",
-        "iosfwd": "cpp",
-        "new": "cpp",
-        "stdexcept": "cpp",
-        "system_error": "cpp",
-        "typeinfo": "cpp"
+      "*.h": "cpp",
+      "*.cpp": "cpp",
+      "*.tcc": "cpp",
+      "array": "cpp",
+      "string": "cpp",
+      "string_view": "cpp",
+      "vector": "cpp",
+      "functional": "cpp",
+      "memory": "cpp",
+      "optional": "cpp",
+      "algorithm": "cpp",
+      "cmath": "cpp",
+      "cstdint": "cpp",
+      "cstddef": "cpp",
+      "cstdio": "cpp",
+      "cstdlib": "cpp",
+      "cstring": "cpp",
+      "cctype": "cpp",
+      "chrono": "cpp",
+      "limits": "cpp",
+      "type_traits": "cpp",
+      "utility": "cpp",
+      "initializer_list": "cpp",
+      "iosfwd": "cpp",
+      "new": "cpp",
+      "stdexcept": "cpp",
+      "system_error": "cpp",
+      "typeinfo": "cpp",
+      "iostream": "cpp"
     },
     
     // Editor settings for C++
