Refactor CosoriKettleBLE to remove button support and enhance registration handling
- Removed the button platform for device registration, transitioning to a switch-based approach.
- Updated the CosoriKettleBLE class to utilize a register switch for pairing with the kettle.
- Improved logging for registration and handshake processes.
- Enhanced Makefile to include dependency tracking and a compile target for ESPHome configuration.
- Updated .gitignore to exclude dependency files.

--- a/Makefile.test
+++ b/Makefile.test
@@ -2,15 +2,16 @@
 # This tests the envelope.h and protocol.cpp files against real device packets
 
 CXX = g++
-CXXFLAGS = -std=c++17 -Wall -Wextra -O2 -g
+CXXFLAGS = -std=c++17 -Wall -Wextra -O2 -g -MMD -MP
 INCLUDES = -I.
 
 # Source files
 SOURCES = test_cpp.cpp components/cosori_kettle_ble/protocol.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
+DEPS = $(SOURCES:.cpp=.d)
 TARGET = test_cpp
 
-.PHONY: all clean test run
+.PHONY: all clean test run compile
 
 all: $(TARGET)
 
@@ -20,10 +21,16 @@ $(TARGET): $(OBJECTS)
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -c $< -o $@
 
+# Include dependency files
+-include $(DEPS)
+
 test: $(TARGET)
 	./$(TARGET)
 
 run: test
 
+compile:
+	uvx --python=3.13 --with=pip esphome compile cosori-kettle.build.yaml
+
 clean:
-	rm -f $(TARGET) $(OBJECTS)
+	rm -f $(TARGET) $(OBJECTS) $(DEPS)
