--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,51 @@
       "stdexcept": "cpp",
       "system_error": "cpp",
       "typeinfo": "cpp",
-      "iostream": "cpp"
+      "iostream": "cpp",
+      "atomic": "cpp",
+      "bit": "cpp",
+      "bitset": "cpp",
+      "charconv": "cpp",
+      "cinttypes": "cpp",
+      "clocale": "cpp",
+      "compare": "cpp",
+      "complex": "cpp",
+      "concepts": "cpp",
+      "condition_variable": "cpp",
+      "cstdarg": "cpp",
+      "ctime": "cpp",
+      "cwchar": "cpp",
+      "cwctype": "cpp",
+      "deque": "cpp",
+      "list": "cpp",
+      "map": "cpp",
+      "set": "cpp",
+      "unordered_map": "cpp",
+      "exception": "cpp",
+      "iterator": "cpp",
+      "memory_resource": "cpp",
+      "netfwd": "cpp",
+      "numeric": "cpp",
+      "random": "cpp",
+      "ratio": "cpp",
+      "regex": "cpp",
+      "tuple": "cpp",
+      "format": "cpp",
+      "fstream": "cpp",
+      "future": "cpp",
+      "iomanip": "cpp",
+      "istream": "cpp",
+      "mutex": "cpp",
+      "numbers": "cpp",
+      "ostream": "cpp",
+      "semaphore": "cpp",
+      "span": "cpp",
+      "sstream": "cpp",
+      "stop_token": "cpp",
+      "streambuf": "cpp",
+      "text_encoding": "cpp",
+      "thread": "cpp",
+      "variant": "cpp"
     },
     
     // Editor settings for C++
