move library inside component.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ test = [
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-testpaths = ["tests/ha_component", "tests/library"]
+testpaths = ["tests/library"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
