--- a/custom_components/cosori_kettle_ble/manifest.json
+++ b/custom_components/cosori_kettle_ble/manifest.json
@@ -5,6 +5,10 @@
     {
       "service_uuid": "0000fff0-0000-1000-8000-00805f9b34fb",
       "connectable": true
+    },
+    {
+      "local_name": "Cosori Gooseneck Kettle",
+      "connectable": true
     }
   ],
   "codeowners": [
