--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,5 @@ jobs:
     - name: Install dependencies
       run: uv sync --group dev
 
-    - name: Run library tests
-      run: uv run pytest tests/library/ -v
-
-    - name: Run HA component tests
-      run: uv run pytest tests/ha_component/ -v
+    - name: Run tests
+      run: uv run pytest tests/ -v
